src/tests/expand_fn/fail/stack_overflow.tj
fn rec<n>() = (a)
    a = rec<n-1>()

module main() = ()
    automaton
        node n 
            a = rec<1>()
        transition